--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@babel/core": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.3.1",
